# gravityfile

./: .gitignore  AUDIT_FIXES.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: release.yml
assets/: demo.webm
crates/gravityfile-analyze/: Cargo.toml  README.md
crates/gravityfile-analyze/src/: age.rs  duplicates.rs  lib.rs
crates/gravityfile-analyze/tests/: analyze_tests.rs
crates/gravityfile-core/: Cargo.toml  README.md
crates/gravityfile-core/src/: config.rs  error.rs  lib.rs  node.rs  tree.rs
crates/gravityfile-core/tests/: core_tests.rs
crates/gravityfile-ops/: Cargo.toml  README.md
crates/gravityfile-ops/src/: archive.rs  conflict.rs  copy.rs  create.rs  executor.rs  lib.rs  move_op.rs  operation.rs  progress.rs  rename.rs  undo.rs
crates/gravityfile-plugin/: Cargo.toml
crates/gravityfile-plugin/src/: config.rs  hooks.rs  lib.rs  runtime.rs  sandbox.rs  types.rs
crates/gravityfile-plugin/src/lua/: bindings.rs  isolate.rs  mod.rs  runtime.rs
crates/gravityfile-plugin/src/rhai/: mod.rs  runtime.rs
crates/gravityfile-plugin/src/wasm/: isolate.rs  mod.rs  runtime.rs
crates/gravityfile-scan/: Cargo.toml  README.md
crates/gravityfile-scan/src/: git.rs  inode.rs  lib.rs  progress.rs  scanner.rs
crates/gravityfile-scan/tests/: scan_tests.rs
crates/gravityfile-tui/: Cargo.toml  README.md
crates/gravityfile-tui/src/: app.rs  event.rs  lib.rs  opener.rs  theme.rs
crates/gravityfile-tui/src/app/: commands.rs  constants.rs  deletion.rs  input.rs  mod.rs  navigation.rs  render.rs  scanning.rs  state.rs
crates/gravityfile-tui/src/preview/: content.rs  mod.rs  syntax.rs
crates/gravityfile-tui/src/search/: mod.rs  state.rs
crates/gravityfile-tui/src/ui/: help.rs  miller.rs  mod.rs  modals.rs  size_bar.rs  tree.rs  treemap.rs
docs/: ARCHITECTURE.md  PLUGINS.md
examples/plugins/lua/: git_notify.lua
examples/plugins/rhai/: large_file_warning.rhai
examples/plugins/wasm/rust-pdk/src/: lib.rs
scripts/: grav.bash  grav.fish  grav.zsh
src/: main.rs
