[package]
name = "gravityfile-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Analysis algorithms for gravityfile (duplicates, age, trends)"

[dependencies]
gravityfile-core.workspace = true
blake3.workspace = true
rayon.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
serde.workspace = true
globset.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
