[package]
name = "gravityfile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for gravityfile"

[dependencies]
serde.workspace = true
thiserror.workspace = true
compact_str.workspace = true
chrono.workspace = true
derive_builder.workspace = true
