[package]
name = "gravityfile-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File operations engine for gravityfile"

[dependencies]
gravityfile-core.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true

# File operations
fs_extra = "1.3"
trash = "5"

[dev-dependencies]
tempfile.workspace = true
