[package]
name = "gravityfile-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File operations engine for gravityfile"

[dependencies]
gravityfile-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

# File operations
trash = "5"

# Archive support
zip.workspace = true
tar.workspace = true
flate2.workspace = true
xz2.workspace = true
bzip2.workspace = true

[dev-dependencies]
tempfile.workspace = true
