[package]
name = "gravityfile-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File system scanning engine for gravityfile"

[dependencies]
gravityfile-core.workspace = true
jwalk.workspace = true
rayon.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
compact_str.workspace = true
globset.workspace = true
git2 = { workspace = true, optional = true }

[features]
default = ["git"]
git = ["dep:git2"]

[dev-dependencies]
tempfile = "3"
